github_data_collector/src/data/issue_comment/xintrea_mytetra_dev.txt
Сборка комплектом MSVC.
Проблема затронута в #105 и #106 
Сегодня собрал для себя MyTetra по инструкции из этой темы на форуме: https://webhamster.ru/punbb/viewtopic.php?pid=5066#p5066. Работает, но не очень удобно. Ещё отсутствует иконка приложения. Было бы не плохо разобраться как по-нормальному можно сделать полноценную сборку, чтобы потом это приложение можно было поставить, например, через `brew cask install mytetra`.
Хочу попробовать разобраться в этом и запилить сборку, по крайней мере во Flatpak. Пишу по большей части для себя, чтобы не забыть это сделать :) Если у кого-то есть желание или опыт помочь, то буду рад.
Использование статических анализаторов кода в процессе разработки -- общепризнанно хорошая практика. Для кода на C++ есть несколько статических анализаторов, которые помогают находить различные ошибки (как в плане стиля оформления кода, так и в плане функционала).

На данный момент нашёл следующие:
* [clang-tidy](http://clang.llvm.org/extra/clang-tidy/)
* [cppcheck](https://github.com/danmar/cppcheck)
* [cpplint](https://github.com/google/styleguide/blob/gh-pages/cpplint/cpplint.py)
* [flint](https://github.com/facebookarchive/flint)

Попробовал прогнать cppcheck по кодовой базе MyTetra из ветки experimental, отчёт можно найти [здесь](https://gist.github.com/and-semakin/1eda3a5e9c84dc1180a0eb25fdfb5641). Если хотите, то я мог бы попытаться починить эти предупреждения/ошибки и настроить прохождение этого линтера в Travis CI, так чтобы в последствии эта проверка автоматически прогонялась при создании Pull Request'ов (будет блокировать, если есть ошибки) или коммитов (будут просто надоедливые красные крестики).

Опыта разработки на C++ у меня не много, я в основном питонист, но я заинтересован в том, чтобы в MyTetra был хороший код :)
Спасибо за проект!

Было бы не плохо где-нибудь иметь инструкции по сборке. Например, методом тыка я выяснил, что необходимая версия Qt для сборки проекта из ветки `experimental` как минимум с сентября 2019 -- 5.13, но во многие операционные системы эту версию ещё не завезли (в Fedora Linux сейчас 5.12.5). Хотелось бы узнать, как вы собираете проект, откуда берёте Qt и вообще :)
Пробовал через по разному, qmake&&make так и через QtCreator, с версиями Qt 5.5.1 и 5.13.1. Как на Ubuntu 16.04, так и на 18.04
Ошибки компиляции:


```
src/libraries/wyedit/Editor.cpp:505:47: error: ‘qOverload’ was not declared in this scope
     connect(editorToolBarAssistant->fontSize, qOverload<int>(&EditorFontSizeComboBox::currentIndexChanged),                                                                                                                                                                    
                                               ^
src/libraries/wyedit/Editor.cpp:505:57: error: expected primary-expression before ‘int’
     connect(editorToolBarAssistant->fontSize, qOverload<int>(&EditorFontSizeComboBox::currentIndexChanged),                                                                                                                                                                    
                                                         ^
src/libraries/wyedit/Editor.cpp: In member function ‘void Editor::setTabSize()’:
src/libraries/wyedit/Editor.cpp:1466:15: error: ‘class EditorTextArea’ has no member named ‘setTabStopDistance’
     textArea->setTabStopDistance(                                                                                                                                                                                                                                              
               ^


```
Доброго дня! Хотел бы уточнить возможность доработать ПО для слеующей истории:

**Потребность**
Выявлять проблемные области собственного знания, требующие уточнения, развития, доработки. 

**Предполагаемый способ устранения**
Анализ последовательности проведённых рассуждений по сделанным заметкам, на наличие противоречий, полноту, обоснованность.

**История пользователя инструмента**
Как пользователю хранилища заметок для осуществления навигации мне важно видеть связанные заметки. Важны 2 типа заметок:
- Заметки служившие основанием для появления текущей
- Заметки основанные на текущей

**Предложение по реализации:**
Добавить возможность связывать заметки и отображать связанные в отдельном окне или поле заметки.

С уважением.
**Description:** I have KDE. I set the Adapta KDE theme (Kvantum Manager), and now the names of the branches in the tree are almost unreadable. Please make a adaptive text color.
**Example**: 
![Screenshot_20190325_214245](https://user-images.githubusercontent.com/8705683/55010033-94e28b00-4ff4-11e9-9800-407c7bc0be5b.png)

**Additional info**:
* OS: Manjaro x64
* DE: KDE Plasma 5.15.3
* Qt: 5.12.1
* Builded commit: https://github.com/xintrea/mytetra_dev/commit/5c9dfdbf58adedeb7774185b5577910db645dfdb

You have interesting competitor: https://www.qownnotes.org/

these guys already made list of tags, it would be great to have same feature in mytetra, here is demo:

![image](https://user-images.githubusercontent.com/37320103/53935029-ce327580-409c-11e9-83b3-c8f2e7ddb044.png)

I see no ways to rename tags now, it would be great to have this opportunity